--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <ul class="navbar">
                     <img src="x-button-removebg-preview.png" id="cros">
                     <li>Home</li>
-                    <li>Product</li>
+                    <li onclick="window.location.href='product.html'">Product</li>
                     <li>About</li>
                     <li>Contact Us</li>
                 </ul>
@@ -292,7 +292,7 @@
                             <i class="fa fa-star-half-o"></i>
                     </div>
                     <div class="box">
-                        <img src="photo1.png">
+                        <img onclick="window.location.href='product.html'" src="photo1.png">
                         <p>Price:100$</p>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
