--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             display: flex;
             justify-content:space-between;
             align-items: center;
-            position: sticky;
+            position: fixed;
             top:0;
+            width:100%;
             box-shadow:3px 2px 2px 2px rgba(0,0,0,0.4);
             box-sizing: border-box;
             background: cadetblue;
@@ -69,6 +70,7 @@
             margin:50px auto;
             box-sizing: border-box;
             background: cadetblue;
+            margin-top:15%;
         }
         .product{
             box-sizing: border-box;
