--- a/product.html
+++ b/product.html
@@ -16,8 +16,9 @@
             display: flex;
             justify-content:space-between;
             align-items: center;
-            position: sticky;
+            position: fixed;
             top:0;
+            width:100%;
             box-shadow:3px 2px 2px 2px rgba(0,0,0,0.4);
             box-sizing: border-box;
             background: cadetblue;
@@ -73,6 +74,7 @@
             justify-content: center;
             background: cadetblue;
             border:1px solid red;
+            margin-top:15%;
         }
         .big-img{
             margin:0px 5px;
