--- a/product.html
+++ b/product.html
@@ -24,6 +24,7 @@
             background: cadetblue;
             color:white;
             padding: 10px 24px;
+            z-index: 1;
         }
         .Container h1{
             font-size:50px;
@@ -73,7 +74,6 @@
             display: flex;
             justify-content: center;
             background: cadetblue;
-            border:1px solid red;
             margin-top:15%;
         }
         .big-img{
@@ -84,13 +84,11 @@
         }
         .Img-holder{
             justify-content: center;
-            border:1px solid yellow
         }
         .small-img-holder{
             display: flex;
             width: 100%;
             justify-content: center;
-            border:1px solid green;
             
         }
         .small-img-holder .small-img{
@@ -109,7 +107,6 @@
             width:40%;
             text-align: center;
             line-height:60px;
-            border:1px solid purple;
             overflow: auto;
         }
         .p1{
@@ -123,7 +120,6 @@
         .p-details{
             min-height:700px;
             color:white;
-            border:1px solid blue;
         }
         .p-details h1,h2,select{
             position: relative;
@@ -139,7 +135,6 @@
             outline:none;
         }
         .p2{
-            border:1px solid;
             position: relative;
             left:1%;
             line-height: 30px;
@@ -182,6 +177,15 @@
             position: relative;
             right:28%;
         }
+        @media(max-width:1366px){
+            .p1{
+                position: relative;
+                right: 36%
+            }
+            .p-product{
+                margin-top: 10%;
+            }
+        }
         @media(max-width:1260px){
             .p1 {
                 position: relative;
@@ -194,7 +198,6 @@
             .p-details {
                 min-height: 560px;
                 color: white;
-                border: 1px solid blue;
             }
             .p-details h1, h2, select {
                 position: relative;
@@ -205,7 +208,6 @@
                 right: 12%;
             }
             .p2 {
-                border: 1px solid;
                 position: relative;
                 left: 1%;
                 line-height: 28px;
@@ -232,7 +234,6 @@
                 display: flex;
                 width: 94%;
                 justify-content: center;
-                border: 1px solid green;
             }
         }
         @media(max-width:995px){
@@ -342,6 +343,9 @@
             margin: 0px 10px;
             font-size: 27px;
         }
+        .p-details {
+            width: 225px;
+        }
         .small-img-holder{
             margin-left:10px;
         }
@@ -349,6 +353,250 @@
             line-height: 13px;
             width: 80%;
         }
+    }
+    @media(max-width:630px){
+        .p1 {
+            position: relative;
+            right: 61px;
+        }
+        .p-details h1 {
+            font-size: 16px;
+        }
+        .p-details h2 {
+        font-size: 16px;
+        }
+        .p2 {
+            line-height: 12px;
+            width: 75%;
+            font-size: 12px;
+            }
+        .p-details h1,h2,select{
+             position: relative;
+             right:18px;
+        }
+        .add {
+            position: relative;
+            right: 9%;
+        }
+        .p-details {
+            width: 190px;
+        }
+        .p-product{
+            margin-top: 20%;
+        }
+    }
+    @media(max-width:590px){
+        .p-product{
+            display: block;
+        }
+        .details {
+        width: 95%;
+        }
+        .p-details {
+            width: 135%;
+            margin-left:20%;
+            justify-content: center;
+            overflow: auto;
+        }
+        .big-img img{
+            margin:0px 25px;
+        }
+        nav ul li{
+            font-size: 22px;
+        }
+
+        .add {
+            position:relative;
+            left: 35px;
+            bottom:8%;
+            
+        }
+        .p-details h1,h2,select{
+            position:relative;
+            right:28%;
+        }
+        .p2 {
+            line-height: 30px;
+            width: 90%;
+            font-size: 18px;
+            position: relative;
+            bottom: 44px;
+            left:6%;
+        }
+        .small-img-holder .small-img {
+            width: 78px;
+            height: 98px;
+        }
+    }
+        @media(max-width:500px){
+            nav ul{
+                display:flex;
+                flex-direction: column;
+                position: fixed;
+                top:0;
+                right:-300px;
+                background: cadetblue;
+                min-height: 100vh;
+                width:250px;
+                box-shadow: 2px 5px 10px 5px rgba(0,0,0,0.4);
+                transition: 1s;
+            }
+            nav ul li{
+                margin: 20px 0px;
+                font-size:30px;
+            }
+            #cros{
+                display:block;
+                position: relative;
+                right:40%;
+            }
+            #menu{
+                display:block;
+            }
+            .p-details{
+                width: 135%;
+                margin-left: 9%
+            }
+            .small-img-holder .small-img {
+                width: 70px;
+                height: 94px;
+            }
+    }
+    @media(max-width:450px){
+        .small-img-holder .small-img {
+            width: 64px;
+            height: 90px;
+        }
+        .big-img img{
+            width:75%;
+            position: relative;
+            left:6%;
+        }
+        .p2 {
+                line-height: 15px;
+                width: 76%;
+                font-size: 18px;
+                position: relative;
+                left:10%;
+            }
+            .Container h1 {
+                font-size: 42px;
+            }
+    }
+    @media(max-width:418px){
+        .p-details h1, h2, select {
+            position: relative;
+            right: 24%;
+        }
+        .add {
+            position: relative;
+            left: 62px;
+            bottom: 8%;
+        }
+        .p-details {
+            width: 114%;
+            margin-left: 9%;
+            }
+            .small-img-holder .small-img {
+            width: 60px;
+            height: 85px;
+        }
+        .p-product{
+            margin-top:26%;
+        }
+    }
+    @media(max-width:396px){
+        .small-img-holder .small-img {
+            width: 53px;
+            height: 75px;
+        }
+        .p-details {
+            width: 107%;
+            margin-left: 9%;
+        }
+        .p-details h1, h2, select {
+            position: relative;
+            right: 22%;
+        }
+        .add button {
+            padding: 7px 5px;
+            font-size: 12px;
+        }
+    }
+    @media(max-width:364px){
+        .p-details {
+        width: 94%;
+        margin-left: 9%;
+    }
+    .p2 {
+        line-height: 14px;
+        width: 83%;
+        font-size: 15px;
+        position: relative;
+        left: 10%;
+    }
+    .add button {
+        padding: 7px 2px;
+        font-size: 11px;
+    }
+    .add input {
+        width: 22px;
+        height: 22px;
+    }
+    .p-details h1, h2, select {
+        position: relative;
+        right: 19%;
+    }
+    .add {
+        position: relative;
+        left: 71px;
+        bottom: 8%;
+    }
+    .small-img-holder .small-img {
+        width: 47px;
+        height: 69px;
+    }
+    .p-product{
+        margin-top:30%;
+    }
+    }
+    @media(max-width:322px){
+        .add {
+        position: relative;
+        top: 0%;
+        left: -15%;
+    }
+    .p2 {
+        position: relative;
+        top: 0%;
+    }
+    .p-details {
+        width: 85%;
+        margin-left: 9%;
+    }
+    .p2 {
+        line-height: 15px;
+        width: 83%;
+        font-size: 12px;
+    }
+    .p-details h1, h2, select {
+        position: relative;
+        right: 13%;
+    }
+    .small-img-holder .small-img {
+        width: 40px;
+        height: 63px;
+    }
+    }
+    @media(max-width:295px){
+        .p-details {
+        width: 79%;
+        margin-left: 9%;
+    }
+    .small-img-holder .small-img {
+        width: 37px;
+        height: 60px;
+    }
     }
     </style>
 </head>
@@ -427,5 +675,17 @@
         smallimg[4].onclick=function(){
             bigimg.src = smallimg[4].src
         }
+    </script>
+    <script>
+        let cros = document.getElementById('cros')
+        let menu = document.getElementById('menu')
+        let navbar = document.querySelector('.navbar')
+
+        menu.addEventListener('click',()=>{
+            navbar.style.right="0px"
+        })
+        cros.addEventListener('click',()=>{
+            navbar.style.right="-300px"
+        })
     </script>
     </html>
