--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             background: cadetblue;
             color:white;
             padding: 10px 24px;
+            z-index: 1;
         }
         .Container h1{
             font-size:50px;
@@ -225,7 +226,7 @@
                 }
                 nav ul li {
                         font-size: 30px;
-                        margin: 30px 0px;
+                        margin: 25px 0px;
                     }
                     
                     #menu{
@@ -242,6 +243,9 @@
                         grid-template-columns: repeat(2, 150px);
                         justify-content: center;
                     }
+                    .Pro-main{
+                        margin-top:23%;
+                    }
 
         }
         @media(max-width:330px){
@@ -257,6 +261,14 @@
                 display: grid;
                 justify-content: center;
                 grid-template-columns: repeat(2,130px);
+            }
+            .Pro-main{
+                margin-top:25%;
+            }
+        }
+        @media(max-width:300px){
+            .Pro-main{
+                margin-top:30%;
             }
         }
 
